# MTGA-DeckDownloader

./: .gitignore  AGENTS.md  DEVELOPMENT.md  README.md  app.py  capr4n.omp.TAP.json  config.json  pyproject.toml  requirements.txt
.github/workflows/: build-installers.yml  ci.yml
docs/: architecture.md  future_installer.md  releasing.md
mtga_deck_downloader/: __init__.py  config.py  models.py  ui.py
mtga_deck_downloader/providers/: aetherhub.py  base.py  magic_gg.py  moxfield.py  registry.py  untapped.py
mtga_deck_downloader/scrapers/: common.py  magic_gg.py  untapped.py  untapped_deckstring.py
packaging/: build_payload.py  generate_icons.py
packaging/macos/: Info.plist  Launcher.swift  build_dmg.sh  launch.command
packaging/pyinstaller/: mtga_deck_downloader.spec
packaging/windows/: build_installer.ps1  installer.iss  sign.ps1
src/mtga_deck_downloader/: __main__.py  config.py  default_config.json  models.py  ui.py
src/mtga_deck_downloader/providers/: __init__.py  aetherhub.py  base.py  magic_gg.py  moxfield.py  registry.py  tcgplayer.py  untapped.py
src/mtga_deck_downloader/scrapers/: __init__.py  aetherhub.py  common.py  magic_gg.py  moxfield.py  tcgplayer.py  untapped.py
tests/: __init__.py  test_aetherhub_provider.py  test_aetherhub_scraper.py  test_cli.py  test_common.py  test_config.py  test_magic_gg_scraper.py  test_moxfield_provider.py  test_moxfield_scraper.py  test_random_deck.py  test_tcgplayer_provider.py  test_tcgplayer_scraper.py  test_ui.py  test_untapped_provider.py  test_untapped_scraper.py
